<resources>
  <string name="app_name">Baking App</string>

  <string name="title_ingredient">Ingredient</string>
  <string name="title_steps">Steps</string>

  <string name="recipe_image_description">Image of recipe</string>
  <string name="step_thumbnail_description">Thumbnail of step</string>
  <string name="detail_steps_arrow_description">Icon go to step</string>

  <string name="step_previous_text">Missed something?\nGo Back to previous step</string>
  <string name="step_next_text">Next step</string>
  <string name="widget_recipe_title">Recipe</string>
  <string name="widget_configuration_title">Choose a recipe</string>
</resources>
