...
    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/spacing_normal"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">
      <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/horizontal_spacing"
        android:paddingRight="@dimen/horizontal_spacing">
        <android.support.design.widget.TabLayout
          android:id="@+id/tab_layout_recipe_detail"
...
